--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "next": "latest",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   },
